--- a/proj-descendantOfTheDesert.html
+++ b/proj-descendantOfTheDesert.html
@@ -81,7 +81,13 @@
                             3D printing<br>
                             laser Cutting<br>
                             <br>
-                            <strong>Group Project</strong>
+                            <strong>Group Project</strong><br>
+                            Jiapei Yao, Liuliu Zhu, Shiyuan Tian, Xiaoyan Zhou
+                            <strong>Role: </strong>
+                            Collaborate on Research and Concept Development, Final Fabrication and Assemble ,
+                            Documentation and Filming.
+                            Specifically focused on Overall Design, Technical Implementation of Waist Motor and Spine
+                            Bending Movement, Video Design.
                         </p>
                     </div>
                 </div>
@@ -109,7 +115,16 @@
 
             <!-- Gallery starts -->
             <div class="description">
-                <p>description ***</p>
+                <p>In a speculative future, where environmental degradation and technological advancements lead to the
+                    transformation of individuals into cyborgs, surviving in a desolate desert becomes a reality.
+                    Biomechanically and physiologically, "Descendant of the Desert" presents an Exoskeleton x Spine,
+                    integrating multiple sensors and actuators to enhance human perception and interaction with the
+                    environment. In collaboration with research and concept development, I am in charge of designing,
+                    sketching, and addressing the technical aspects, and also specifically focusing on implementing the
+                    waist motor and bringing the spine bending movement to realization. Assembled and tailored
+                    collaboratively, this potential human evolution sparks contemplation on the degradation of human
+                    sensory information and free will due to technological advancements, where machine algorithms may
+                    substitute human free will and decision-making.</p>
             </div>
             <div class="video">
                 <iframe src="https://www.youtube.com/embed/w04F4XPDW8c" frameborder="0" allowfullscreen></iframe>
@@ -165,18 +180,6 @@
                 <div class="all-content">
                     <div class="gallery-container">
                         <div class="gallery-item">
-                            <a href="proj-etherealAlchemy.html">
-                                <img src="assets/Projects-featuredImage/ethereal.png" alt="Project 1">
-                                <p class="gallery-project-title">Ethereal Alchemy</p>
-                            </a>
-                        </div>
-                        <div class="gallery-item">
-                            <a href="proj-descendantOfTheDesert.html">
-                                <img src="assets/Projects-featuredImage/desert.png" alt="Project 2">
-                                <p class="gallery-project-title">Descendant Of The Desert</p>
-                            </a>
-                        </div>
-                        <div class="gallery-item">
                             <a href="proj-cityOfBelonging.html">
                                 <img src="assets/Projects-featuredImage/belonging.png" alt="Project 3">
                                 <p class="gallery-project-title">City Of Belonging</p>
@@ -194,6 +197,12 @@
                             <a href="proj-disconnect.html">
                                 <img src="assets/Projects-featuredImage/disconnect.png" alt="Project 5">
                                 <p class="gallery-project-title">Disconnect</p>
+                            </a>
+                        </div>
+                        <div class="gallery-item">
+                            <a href="proj-etherealAlchemy.html">
+                                <img src="assets/Projects-featuredImage/ethereal.png" alt="Project 1">
+                                <p class="gallery-project-title">Ethereal Alchemy</p>
                             </a>
                         </div>
                     </div>
