--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shiyuan Tian</title>
     <link rel="stylesheet" href="styles-general.css">
+    <link rel="stylesheet" href="styles-indexPage.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -49,11 +50,137 @@
     <!-- ========================================================================================== -->
 
     <!-- main content starts -->
-    <div class="main-content">
-        <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
-        <!-- <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
-        <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
-        <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> -->
+    <div class="content-body">
+        <div class="all-content">
+            <div class="caption">
+                <p class="hello">Hello, I'm Shiyuan Tian</p>
+                <p class="welcome">Welcome To My Portfolio</p>
+            </div>
+
+            <div class="illustration">
+                <img class="gif" src="assets/indexPage/illustration.gif" alt="daily life of me">
+            </div>
+            <p style="text-align:center;">Compassionate Designer and Creative Technologist</p>
+
+
+        </div>
+    </div>
+    <div class="content-body">
+        <div class="all-content">
+            <p class="subTitle" style="margin-top: 50px; margin-bottom: -70px;">Featured Projects</p>
+            <div class="project-container">
+                <a class="proj-block" href="proj-etherealAlchemy.html">
+                    <div class="container-proj1">
+                        <img src="assets/indexPage/coverImage/ethereal.png" alt="Sample Image"
+                            class="hover-image-proj1">
+                        <div class="hover-text-proj1">
+                            <h3 class="menu-project-title">Ethereal Alchemy</h3>
+                            <p class="menu-project-tages">Interactive Projection<br>2023 | Individual
+                                Work</p>
+                            <p class="menu-project-description">An emotional healing experience helping the audience to
+                                achieve holistic well-being and find their emotional state of balance through the
+                                expressive body movement and interactive media experience.</p>
+                        </div>
+                    </div>
+                </a>
+                <!-- ----------------------------------------------- -->
+                <a class="proj-block" href="proj-descendantOfTheDesert.html">
+                    <div class="container-proj2">
+                        <img src="assets/indexPage/coverImage/desert.png" alt="Sample Image" class="hover-image-proj2">
+                        <div class="hover-text-proj2">
+                            <h3 class="menu-project-title">Descendant Of The Desert</h3>
+                            <p class="menu-project-tages">Wearable Interactive Installation<br>2022 | Group Work</p>
+                            <p class="menu-project-description">A speculative human biomorph that enables us to survive
+                                in the desert without taking refuge from the physical dependencies. </p>
+                        </div>
+                    </div>
+                </a>
+                <!-- ----------------------------------------------- -->
+                <a class="proj-block" href="proj-cityOfBelonging.html">
+                    <div class="container-proj3">
+                        <img src="assets/indexPage/coverImage/belonging.png" alt="Sample Image"
+                            class="hover-image-proj3">
+                        <div class="hover-text-proj3">
+                            <h3 class="menu-project-title">City Of Belonging</h3>
+                            <p class="menu-project-tages">UI/UX Design | AR Development<br>2023 | Individual Work</p>
+                            <p class="menu-project-description">An augmented reality-powered mobile application,
+                                revolutionizing the way individuals from diverse cultural backgrounds navigate new
+                                territories, and build their sense of belonging. </p>
+                        </div>
+                    </div>
+                </a>
+                <!-- ----------------------------------------------- -->
+                <a class="proj-block" href="proj-theLostLetter.html">
+                    <div class="container-proj4">
+                        <img src="assets/indexPage/coverImage/letter.png" alt="Sample Image" class="hover-image-proj4">
+                        <div class="hover-text-proj4">
+                            <h3 class="menu-project-title">The Lost Letter</h3>
+                            <p class="menu-project-tages">Game Design and Development<br>2022-Present | Group Work</p>
+                            <p class="menu-project-description">A speculative human biomorph that enables us to survive
+                                in the
+                                desert without taking refuge from the physical dependencies. </p>
+                        </div>
+                    </div>
+                </a>
+
+                <a class="proj-block" href="proj-disconnect.html">
+                    <div class="container-proj5">
+                        <img src="assets/indexPage/coverImage/disconnect.png" alt="Sample Image"
+                            class="hover-image-proj5">
+                        <div class="hover-text-proj5">
+                            <h3 class="menu-project-title">Disconnect</h3>
+                            <p class="menu-project-tages">Interactive Art Installation<br>2022 | Individual Work</p>
+                            <p class="menu-project-description">A large-scale installation crafted from 300+ cassettes,
+                                highlights the isolation brought forth by digital connectivity.</p>
+                        </div>
+                    </div>
+                </a>
+
+                <!-- add a new project: css-styles-indexPage.css - menu part ; js-script.js - Index page - Menu - Project hover animation-->
+                <!-- <a class="proj-block" href="proj-descendantOfTheDesert.html">
+                    <div class="container-proj6">
+                        <img src="assets/indexPage/coverImage/desert.png" alt="Sample Image" class="hover-image-proj6">
+                        <div class="hover-text-proj6">
+                            <h3 class="menu-project-title">Name</h3>
+                            <p class="menu-project-tages">***</p>
+                            <p class="menu-project-description">***</p>
+                        </div>
+                    </div>
+                </a> -->
+
+            </div>
+        </div>
+    </div>
+
+
+
+
+    <div class="content-body">
+        <div class="all-content">
+            <p class="subTitle" style="margin-top: -50px;">All Works</p>
+            <div class="wrapcontainer">
+                <div class="wrap3content">
+                    <div style="background-color: dimgrey; width:100%; height: 200px"></div>
+                </div>
+                <div class="wrap3content">
+                    <div style="background-color: rgb(222, 222, 222); width:100%; height: 200px"></div>
+                </div>
+                <div class="wrap3content">
+                    <div style="background-color: dimgrey; width:100%; height: 200px"></div>
+                </div>
+                <div class="wrap3content">
+                    <div style="background-color: rgb(222, 222, 222); width:100%; height: 200px"></div>
+                </div>
+                <div class="wrap3content">
+                    <div style="background-color: dimgrey; width:100%; height: 200px"></div>
+                </div>
+                <div class="wrap3content">
+                    <div style="background-color: rgb(222, 222, 222); width:100%; height: 200px"></div>
+                </div>
+            </div>
+        </div>
+
+    </div>
     </div>
     <!-- main content ends -->
 
