--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
     <!-- ========================================================================================== -->
 
     <!-- main content starts -->
+    <!-- ========================================================================================== -->
+
+    <!-- welcome page starts -->
     <div class="content-body">
         <div class="all-content">
             <div class="caption">
@@ -61,10 +64,14 @@
                 <img class="gif" src="assets/indexPage/illustration.gif" alt="daily life of me">
             </div>
             <p style="text-align:center;">Compassionate Designer and Creative Technologist</p>
-
-
         </div>
     </div>
+    <!-- welcome page ends -->
+
+    <!-- ========================================================================================== -->
+    <!-- ========================================================================================== -->
+
+    <!-- featured project starts -->
     <div class="content-body">
         <div class="all-content">
             <p class="subTitle" style="margin-top: 50px; margin-bottom: -70px;">Featured Projects</p>
@@ -116,13 +123,14 @@
                         <div class="hover-text-proj4">
                             <h3 class="menu-project-title">The Lost Letter</h3>
                             <p class="menu-project-tages">Game Design and Development<br>2022-Present | Group Work</p>
-                            <p class="menu-project-description">A speculative human biomorph that enables us to survive
-                                in the
-                                desert without taking refuge from the physical dependencies. </p>
+                            <p class="menu-project-description">
+                                A narrative-driven digital game that employs the form and motion of Chinese characters
+                                to tell the struggles of a student grappling with overwhelming academic pressure.
+                            </p>
                         </div>
                     </div>
                 </a>
-
+                <!-- ----------------------------------------------- -->
                 <a class="proj-block" href="proj-disconnect.html">
                     <div class="container-proj5">
                         <img src="assets/indexPage/coverImage/disconnect.png" alt="Sample Image"
@@ -135,7 +143,7 @@
                         </div>
                     </div>
                 </a>
-
+                <!-- ----------------------------------------------- -->
                 <!-- add a new project: css-styles-indexPage.css - menu part ; js-script.js - Index page - Menu - Project hover animation-->
                 <!-- <a class="proj-block" href="proj-descendantOfTheDesert.html">
                     <div class="container-proj6">
@@ -147,33 +155,41 @@
                         </div>
                     </div>
                 </a> -->
-
+                <!-- ----------------------------------------------- -->
             </div>
         </div>
     </div>
+    <!-- featured projects ends -->
+    <!-- ========================================================================================== -->
+    <!-- ========================================================================================== -->
 
-
-
-
+    <!-- all projects starts -->
     <div class="content-body">
         <div class="all-content">
             <p class="subTitle" style="margin-top: -50px;">All Works</p>
+            <!-- tages: UX design, product design, XR development, fabrication, installation, coding -->
             <div class="wrapcontainer">
+                <!-- UX design & XR development project -->
                 <div class="wrap3content">
                     <div style="background-color: dimgrey; width:100%; height: 200px"></div>
                 </div>
+                <!-- fabrication & UX design project -->
                 <div class="wrap3content">
                     <div style="background-color: rgb(222, 222, 222); width:100%; height: 200px"></div>
                 </div>
+                <!-- product design project -->
                 <div class="wrap3content">
                     <div style="background-color: dimgrey; width:100%; height: 200px"></div>
                 </div>
+                <!-- product design -->
                 <div class="wrap3content">
                     <div style="background-color: rgb(222, 222, 222); width:100%; height: 200px"></div>
                 </div>
+                <!-- XR development -->
                 <div class="wrap3content">
                     <div style="background-color: dimgrey; width:100%; height: 200px"></div>
                 </div>
+                <!-- fabrication & installation -->
                 <div class="wrap3content">
                     <div style="background-color: rgb(222, 222, 222); width:100%; height: 200px"></div>
                 </div>
@@ -182,6 +198,11 @@
 
     </div>
     </div>
+    <!-- all projects ends -->
+    <!-- ========================================================================================== -->
+    <!-- ========================================================================================== -->
+
+
     <!-- main content ends -->
 
     <!-- ========================================================================================== -->
