update index page and images

--- a/page-template.html
+++ b/page-template.html
@@ -51,12 +51,12 @@
 
     <!-- ========================================================================================== -->
     <!-- ========================================================================================== -->
-
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 
     <!-- ========================================================================================== -->
     <!-- ========================================================================================== -->
-    <footer class="footer">
+    <footer class="footer-alone">
         <div class="wrapcontainer-spaceBetween">
             <div class="wrapcontainer-flexStart" style="align-items: flex-end;">
                 <div class="flexSize icon-container">
