--- a/index.html
+++ b/index.html
@@ -75,55 +75,58 @@
     <div class="content-body">
         <div class="all-content">
             <p class="subTitle" style="margin-top: 50px; margin-bottom: -70px;">Featured Projects</p>
-            <div class="project-container">
-                <a class="proj-block" href="proj-etherealAlchemy.html">
+            <div class="featured-projects">
+                <a class="feature-proj-block" href="featuredProjectPages/proj-etherealAlchemy.html">
                     <div class="container-proj1">
                         <img src="assets/indexPage/coverImage/ethereal.png" alt="Sample Image"
                             class="hover-image-proj1">
                         <div class="hover-text-proj1">
-                            <h3 class="menu-project-title">Ethereal Alchemy</h3>
-                            <p class="menu-project-tages">Interactive Projection<br>2023 | Individual
+                            <h3 class="feature-project-title">Ethereal Alchemy</h3>
+                            <p class="feature-project-tages">Interactive Projection<br>2023 | Individual
                                 Work</p>
-                            <p class="menu-project-description">An emotional healing experience helping the audience to
+                            <p class="feature-proj-description">An emotional healing experience helping the audience
+                                to
                                 achieve holistic well-being and find their emotional state of balance through the
                                 expressive body movement and interactive media experience.</p>
                         </div>
                     </div>
                 </a>
                 <!-- ----------------------------------------------- -->
-                <a class="proj-block" href="proj-descendantOfTheDesert.html">
+                <a class="feature-proj-block" href="featuredProjectPages/proj-descendantOfTheDesert.html">
                     <div class="container-proj2">
                         <img src="assets/indexPage/coverImage/desert.png" alt="Sample Image" class="hover-image-proj2">
                         <div class="hover-text-proj2">
-                            <h3 class="menu-project-title">Descendant Of The Desert</h3>
-                            <p class="menu-project-tages">Wearable Interactive Installation<br>2022 | Group Work</p>
-                            <p class="menu-project-description">A speculative human biomorph that enables us to survive
+                            <h3 class="feature-project-title">Descendant Of The Desert</h3>
+                            <p class="feature-project-tages">Wearable Interactive Installation<br>2022 | Group Work</p>
+                            <p class="feature-proj-description">A speculative human biomorph that enables us to
+                                survive
                                 in the desert without taking refuge from the physical dependencies. </p>
                         </div>
                     </div>
                 </a>
                 <!-- ----------------------------------------------- -->
-                <a class="proj-block" href="proj-cityOfBelonging.html">
+                <a class="feature-proj-block" href="featuredProjectPages/proj-cityOfBelonging.html">
                     <div class="container-proj3">
                         <img src="assets/indexPage/coverImage/belonging.png" alt="Sample Image"
                             class="hover-image-proj3">
                         <div class="hover-text-proj3">
-                            <h3 class="menu-project-title">City Of Belonging</h3>
-                            <p class="menu-project-tages">UI/UX Design | AR Development<br>2023 | Individual Work</p>
-                            <p class="menu-project-description">An augmented reality-powered mobile application,
+                            <h3 class="feature-project-title">City Of Belonging</h3>
+                            <p class="feature-project-tages">UI/UX Design | AR Development<br>2023 | Individual Work</p>
+                            <p class="feature-proj-description">An augmented reality-powered mobile application,
                                 revolutionizing the way individuals from diverse cultural backgrounds navigate new
                                 territories, and build their sense of belonging. </p>
                         </div>
                     </div>
                 </a>
                 <!-- ----------------------------------------------- -->
-                <a class="proj-block" href="proj-theLostLetter.html">
+                <a class="feature-proj-block" href="featuredProjectPages/proj-theLostLetter.html">
                     <div class="container-proj4">
                         <img src="assets/indexPage/coverImage/letter.png" alt="Sample Image" class="hover-image-proj4">
                         <div class="hover-text-proj4">
-                            <h3 class="menu-project-title">The Lost Letter</h3>
-                            <p class="menu-project-tages">Game Design and Development<br>2022-Present | Group Work</p>
-                            <p class="menu-project-description">
+                            <h3 class="feature-project-title">The Lost Letter</h3>
+                            <p class="feature-project-tages">Game Design and Development<br>2022-Present | Group Work
+                            </p>
+                            <p class="feature-proj-description">
                                 A narrative-driven digital game that employs the form and motion of Chinese characters
                                 to tell the struggles of a student grappling with overwhelming academic pressure.
                             </p>
@@ -131,27 +134,28 @@
                     </div>
                 </a>
                 <!-- ----------------------------------------------- -->
-                <a class="proj-block" href="proj-disconnect.html">
+                <a class="feature-proj-block" href="featuredProjectPages/proj-disconnect.html">
                     <div class="container-proj5">
                         <img src="assets/indexPage/coverImage/disconnect.png" alt="Sample Image"
                             class="hover-image-proj5">
                         <div class="hover-text-proj5">
-                            <h3 class="menu-project-title">Disconnect</h3>
-                            <p class="menu-project-tages">Interactive Art Installation<br>2022 | Individual Work</p>
-                            <p class="menu-project-description">A large-scale installation crafted from 300+ cassettes,
+                            <h3 class="feature-project-title">Disconnect</h3>
+                            <p class="feature-project-tages">Interactive Art Installation<br>2022 | Individual Work</p>
+                            <p class="feature-proj-description">A large-scale installation crafted from 300+
+                                cassettes,
                                 highlights the isolation brought forth by digital connectivity.</p>
                         </div>
                     </div>
                 </a>
                 <!-- ----------------------------------------------- -->
                 <!-- add a new project: css-styles-indexPage.css - menu part ; js-script.js - Index page - Menu - Project hover animation-->
-                <!-- <a class="proj-block" href="proj-descendantOfTheDesert.html">
+                <!-- <a class="feature-proj-block" href="featuredProjectPages/proj-descendantOfTheDesert.html">
                     <div class="container-proj6">
                         <img src="assets/indexPage/coverImage/desert.png" alt="Sample Image" class="hover-image-proj6">
                         <div class="hover-text-proj6">
-                            <h3 class="menu-project-title">Name</h3>
-                            <p class="menu-project-tages">***</p>
-                            <p class="menu-project-description">***</p>
+                            <h3 class="feature-project-title">Name</h3>
+                            <p class="feature-project-tages">***</p>
+                            <p class="feature-proj-description">***</p>
                         </div>
                     </div>
                 </a> -->
@@ -167,16 +171,16 @@
     <div class="content-body">
         <div class="all-content">
             <div class="filter-menu">
-                <button class="filter-button" data-filter="default" style="display: none;">Default</button>
                 <button class="filter-button" data-filter="all">All Works</button>
                 <button class="filter-button" data-filter="ux">UX / Product</button>
                 <button class="filter-button" data-filter="xr">XR</button>
                 <button class="filter-button" data-filter="game">Game</button>
                 <button class="filter-button" data-filter="installation">Installation / Immersive Space</button>
                 <button class="filter-button" data-filter="computation">Computation</button>
-                <!-- <button class="filter-button" data-filter="publishings">Publishings</button> -->
+                <!-- <button class="filter-button" data-filter="Paper">Papers</button> -->
                 <button class="filter-button" data-filter="dance">Dance</button>
                 <button class="filter-button" data-filter="fine-arts">Fine Arts</button>
+                <button class="filter-button default" data-filter="default">Default</button>
             </div>
             <div class="content-body">
                 <div class="all-content">
